Fix wrapping of tags

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -34,3 +34,11 @@
   right: 50px;
   top: -39px;
 }
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.tag {
+  margin-bottom: 1rem;
+}
